ajouter un lien

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1> Bonjour tout le monde, </h1>
+    <div id="app"> 
+        <p>
+            <a href="https://github.com/journey/TEST-GIT">
+                <img src="https://img.shields.io/github/stars/journey/TEST-GIT.svg?style=social">
+            </a>
+        </p>
+    </div>
 </body>
 </html>
